--- a/css/bio.css
+++ b/css/bio.css
@@ -63,10 +63,10 @@ body {
 }
 /*idk yet*/
 #wrapper {
-	margin-top: 10vh;
-	margin-left: 10vh;
-	margin-right: 10vh;
-	margin-bottom: 10vh;
+	margin-top: 5vh;
+	margin-left: 15vh;
+	margin-right: 15vh;
+	margin-bottom: auto;
 	font-size: 20px;
 	font-family: proxima_nova_rgregular;
 }
